<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/grisito">

    <TextView
        android:id="@+id/nombrepubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="183dp"
        android:text="@string/nombrepubli"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/correopubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="214dp"
        android:text="@string/correopubli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nombrepubli"
        app:layout_constraintTop_toBottomOf="@+id/nombrepubli"></TextView>

    <TextView
        android:id="@+id/textopubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="163dp"
        android:text="@string/textopubli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correopubli"></TextView>

    <TextView
        android:id="@+id/horapubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="16dp"
        android:text="@string/horapubli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textopubli"
        app:layout_constraintVertical_bias="1.0"></TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/res2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horapubli"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>