<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".registro" >

    <TextView
        android:id="@+id/textView47"
        android:layout_width="214dp"
        android:layout_height="24dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="146dp"
        android:text="Ingresa tu correo electronico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <EditText
        android:id="@+id/nombreregistro"
        android:hint="@string/pedirnombre"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="49dp"
        android:background="@color/grisito"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <EditText
        android:id="@+id/contraregistro"
        android:hint="@string/pedircontra"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="49dp"
        android:background="@color/grisito"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="214dp"
        android:layout_height="24dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="146dp"
        android:text="Ingresa tu nombre completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraregistro" />

    <EditText
        android:id="@+id/correoregistro"
        android:hint="@string/pedircorreo"
        android:layout_width="311dp"
        android:layout_height="43dp"
        android:layout_marginEnd="49dp"
        android:background="@color/grisito"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="214dp"
        android:layout_height="24dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="146dp"
        android:text="Ingresa tu contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/correoregistro" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inacap_logo" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="124dp"
        android:text="REGISTRARSE"
        android:textColor="@color/primary"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="84dp"
        android:text="@string/enviar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreregistro" />

</androidx.constraintlayout.widget.ConstraintLayout>
